--- a/src/CoreLABSBundle/Resources/views/Default/index.html.twig
+++ b/src/CoreLABSBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,11 @@
-Hello World!
+{% extends 'base.html.twig' %}
+
+{% block body %}
+    Home page
+{% endblock %}
+
+{% block stylesheets %}
+<style>
+    
+</style>
+{% endblock %}
