--- a/src/CoreLABSBundle/Resources/views/Default/list_users.html.twig
+++ b/src/CoreLABSBundle/Resources/views/Default/list_users.html.twig
@@ -1,11 +1,19 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}CoreLABS - User Administration{% endblock %}
+
 {% block body %}
     Listing Users
 {% endblock %}
 
 {% block stylesheets %}
+    {{ parent() }}
 <style>
     
 </style>
 {% endblock %}
+
+{% block javascript %}
+  
+{% endblock %}   
+ 
