Further work on admin template.

--- a/src/CoreLABSBundle/Resources/views/Default/index.html.twig
+++ b/src/CoreLABSBundle/Resources/views/Default/index.html.twig
@@ -21,6 +21,9 @@
                         <a href="http://corelabs.sci.ccny.cuny.edu">Online Schedule</a>
                     </li>
                     <li>
+                        <a href="http://corelabsadmin.dev/dashboard">Admin Login</a>
+                    </li>
+                    <li>
                         <a href="http://forum.sci.ccny.cuny.edu/core_facilities/corelabs-guide/contact">Contact us</a>
                     </li>
                 </ul>
@@ -52,7 +55,7 @@
 
             <div class="col-md-3">
                 <h3>Welcome to CCNY CoreLABS</h3>
-                <p>City College of New York maintains a fleet of scientific instrumentation accessible to both academic as well as commercial users. Please visit the "services" section to learn more about our science and how we can help to advance your research projects.</p>
+                <p>City College of New York maintains a fleet of scientific instrumentation accessible to both academic as well as commercial users. We encourage you to explore our web portal to learn more about our equipment, the science done here, and how we can help to advance your research projects.</p>
             </div>
             <div class="col-md-3">
                 <a class="twitter-timeline" data-height="350" data-chrome="nofooter noborders"  data-link-color="#981CEB" href="https://twitter.com/DivOfScience">Tweets by DivOfScience</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
