--- a/src/CoreLABSBundle/Resources/views/Default/admin.base.html.twig
+++ b/src/CoreLABSBundle/Resources/views/Default/admin.base.html.twig
@@ -44,18 +44,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://corelabsadmin.dev/dashboard">CoreLABS dashboard</a>
+          <a class="navbar-brand" href="http://corelabsadmin.dev/dashboard">CoreLABS Dashboard</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://getbootstrap.com/examples/dashboard/#">Dashboard</a></li>
-            <li><a href="http://getbootstrap.com/examples/dashboard/#">Settings</a></li>
-            <li><a href="http://getbootstrap.com/examples/dashboard/#">Profile</a></li>
-            <li><a href="http://getbootstrap.com/examples/dashboard/#">Help</a></li>
+            <li><a href="http://corelabs.sci.ccny.cuny.edu">Schedule</a></li>
+            <li><a href="http://corelabsadmin.dev">Homepage</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
-          </form>
         </div>
       </div>
     </nav>
@@ -64,10 +59,10 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="http://getbootstrap.com/examples/dashboard/#">Start <span class="sr-only">(current)</span></a></li>
-            <li><a href="http://getbootstrap.com/examples/dashboard/#">Users</a></li>
-            <li><a href="http://getbootstrap.com/examples/dashboard/#">Facilities</a></li>
-            <li><a href="http://getbootstrap.com/examples/dashboard/#">Billing</a></li>
+            <li class="active"><a href="http://corelabsadmin.dev/dashboard"> Main <span class="sr-only">(current)</span></a></li>
+            <li><a href="http://corelabsadmin.dev/dashboard/users">Users</a></li>
+            <li><a href="http://corelabsadmin.dev/dashboard/facilities">Facilities</a></li>
+            <li><a href="http://corelabsadmin.dev/dashboard/billing">Billing</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
