--- a/src/CoreLABSBundle/Resources/public/css/dashboard.css
+++ b/src/CoreLABSBundle/Resources/public/css/dashboard.css
@@ -51,7 +51,7 @@ body {
 
 /* Sidebar navigation */
 .nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
+  margin-right: -21px;  /*20px padding + 1px border */
   margin-bottom: 20px;
   margin-left: -20px;
 }
@@ -90,6 +90,7 @@ body {
  */
 
 .placeholders {
+  margin-top: 30px;
   margin-bottom: 30px;
   text-align: center;
 }
@@ -102,4 +103,9 @@ body {
 .placeholder img {
   display: inline-block;
   border-radius: 50%;
+}
+
+.panel-header{
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
