--- a/src/CoreLABSBundle/Resources/views/Default/admin.base.html.twig
+++ b/src/CoreLABSBundle/Resources/views/Default/admin.base.html.twig
@@ -44,12 +44,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://corelabsadmin.dev/dashboard">CoreLAB Admin Panel</a>
+          <a class="navbar-brand" href="http://corelabsadmin.dev/dashboard">CoreLABS Admin Panel</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="http://corelabs.sci.ccny.cuny.edu">Schedule</a></li>
-            <li><a href="http://corelabsadmin.dev">Homepage</a></li>
+            <li><a href="http://corelabsadmin.dev">Home</a></li>
           </ul>
         </div>
       </div>
@@ -58,23 +58,23 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 panel-header" >
-            <h1>CoreLAB Admin Panel</h1>
+            <div class="h1">CCNY CoreLABS</div><div class="h4">Administration Panel</div>
         </div>
         <div class="col-sm-12  main">
 
           <div class="row placeholders">
             <div class="col-xs-12 col-sm-6 col-md-4 placeholder">
-                <a href="http://corelabsamdin.dev/manage/users"><img src="{{ asset("bundles/corelabs/img/users.png")}}" width="250" height="250" class="img-responsive" alt="User managment"></a>
+                <a href="http://corelabsamdin.dev/manage/users"><img src="{{ asset("bundles/corelabs/img/users.png")}}" width="250" height="250" class="img-responsive" alt="Manage users"></a>
               <h4>Users</h4>
               <span class="text-muted">Use this section to view/manage user information</span>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="250" height="250" class="img-responsive" alt="Generic placeholder thumbnail">
+              <img src="{{ asset("bundles/corelabs/img/facilities.png")}}" width="250" height="250" class="img-responsive" alt="Manage facilities and services">
               <h4>Facilities</h4>
-              <span class="text-muted">Use this section to view/manage facilities</span>
+              <span class="text-muted">Use this section to view/manage facilities or services</span>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="250" height="250" class="img-responsive" alt="Generic placeholder thumbnail">
+              <img src="{{ asset("bundles/corelabs/img/billing.png")}}" width="250" height="250" class="img-responsive" alt="Manage billing information">
               <h4>Billing</h4>
               <span class="text-muted">Use this section to access billing data</span>
             </div>
