Further work on Administration Panel

--- a/src/CoreLABSBundle/Resources/views/Default/admin.base.html.twig
+++ b/src/CoreLABSBundle/Resources/views/Default/admin.base.html.twig
@@ -55,28 +55,28 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12 panel-header" >
             <div class="h1">CCNY CoreLABS</div><div class="h4">Administration Panel</div>
         </div>
-        <div class="col-sm-12  main">
+        <div class="col-xs-8 col-xs-offset-2  main">
 
           <div class="row placeholders">
             <div class="col-xs-12 col-sm-6 col-md-4 placeholder">
                 <a href="http://corelabsamdin.dev/manage/users"><img src="{{ asset("bundles/corelabs/img/users.png")}}" width="250" height="250" class="img-responsive" alt="Manage users"></a>
-              <h4>Users</h4>
-              <span class="text-muted">Use this section to view/manage user information</span>
+              <h3>Users</h3>
+              <span class="text-muted">View/manage user information</span>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 placeholder">
               <img src="{{ asset("bundles/corelabs/img/facilities.png")}}" width="250" height="250" class="img-responsive" alt="Manage facilities and services">
-              <h4>Facilities</h4>
-              <span class="text-muted">Use this section to view/manage facilities or services</span>
+              <h3>Facilities</h3>
+              <span class="text-muted">Manage facilities or services</span>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 placeholder">
               <img src="{{ asset("bundles/corelabs/img/billing.png")}}" width="250" height="250" class="img-responsive" alt="Manage billing information">
-              <h4>Billing</h4>
-              <span class="text-muted">Use this section to access billing data</span>
+              <h3>Billing</h3>
+              <span class="text-muted">View/manage billing</span>
             </div>
           </div>
         </div>
