--- a/src/CoreLABSBundle/Resources/views/Default/admin.manage.users.html.twig
+++ b/src/CoreLABSBundle/Resources/views/Default/admin.manage.users.html.twig
@@ -3,50 +3,56 @@
 {% block title %}CoreLABS - Manage users{% endblock %}
 
 {% block content %}
-     <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-12 panel-header" >
-            <div class="h1">CCNY CoreLABS</div><div class="h4">Find a user</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 panel-header" >
+                <span class="h1">CoreLABS Users</span>
+            </div>
+            <div class="col-sm-12" >
+                <form class="form-inline" method="post">
+                    <div class="form-group">
+                        <label for="searchtypeselect">Search by:</label>
+                        <select class="form-control"  id="searchtypeselect">
+                            <option>Username</option>
+                            <option>Last Name</option>
+                            <option>First Name</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="text"/>
+                    </div>
+                    <button type="submit" class="btn btn-default">Search</button>
+                </form>
+            </div>
+            <div class="col-sm-12">
+                <div class="row">
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>User Name</th>
+                                    <th>Name</th>
+                                    <th>Email</th>
+                                    <th>Phone</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for user in users %}
+                                <tr>
+                                    <td>{{ user.uname }}</td>
+                                    <td>{{ user.name }}</td>
+                                    <td>{{ user.email }}</td>
+                                    <td>{{ user.phone }}</td>
+                                    <td><a href="#" class="btn btn-info btn-sm" role="button">Details</a></td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
-          <div class="col-xs-8 col-xs-offset-2">
-              <div class="row">
-                  <table class="table table-striped">
-                      <thead>
-                          <tr>
-                              <th>User Name</th>
-                              <th>Name</th>
-                              <th>Email</th>
-                              <th>P.I.</th>
-                              <th></th>
-                          </tr>
-                      </thead>
-                      <tbody>
-                          <tr>
-                              <td>dfimiarz</td>
-                              <td>Daniel Fimiarz</td>
-                              <td>john@example.com</td>
-                              <td>Daniel Fimiarz</td>
-                              <td><a href="#" class="btn btn-info" role="button">Details</a></td>
-                          </tr>
-                          <tr>
-                              <td>dfimiarz</td>
-                              <td>Daniel Fimiarz</td>
-                              <td>john@example.com</td>
-                              <td>Daniel Fimiarz</td>
-                              <td><a href="#" class="btn btn-info" role="button">Details</a></td>
-                          </tr>
-                          <tr>
-                              <td>dfimiarz</td>
-                              <td>Daniel Fimiarz</td>
-                              <td>john@example.com</td>
-                              <td>Daniel Fimiarz</td>
-                              <td><a href="#" class="btn btn-info" role="button">Details</a></td>
-                          </tr>
-                      </tbody>
-                  </table>
-              </div>
-        </div>
-      </div>
     </div>
 {% endblock %}
 
