--- a/src/CoreLABSBundle/Resources/views/Default/admin.manage.users.html.twig
+++ b/src/CoreLABSBundle/Resources/views/Default/admin.manage.users.html.twig
@@ -9,17 +9,17 @@
                 <span class="h1">CoreLABS Users</span>
             </div>
             <div class="col-sm-12" >
-                <form class="form-inline" method="post">
+                <form class="form-inline" method="get" action="{{ path("manage_users")}}">
                     <div class="form-group">
                         <label for="searchtypeselect">Search by:</label>
-                        <select class="form-control"  id="searchtypeselect">
-                            <option>Username</option>
-                            <option>Last Name</option>
-                            <option>First Name</option>
+                        <select class="form-control"  id="searchtypeselect" name="s_type">
+                            <option value="un">Username</option>
+                            <option value="fn">Last Name</option>
+                            <option value="ln">First Name</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text"/>
+                        <input class="form-control" type="text" name="s_term" value="{{ s_term }}"/>
                     </div>
                     <button type="submit" class="btn btn-default">Search</button>
                 </form>
@@ -39,13 +39,13 @@
                             </thead>
                             <tbody>
                                 {% for user in users %}
-                                <tr>
-                                    <td>{{ user.uname }}</td>
-                                    <td>{{ user.name }}</td>
-                                    <td>{{ user.email }}</td>
-                                    <td>{{ user.phone }}</td>
-                                    <td><a href="#" class="btn btn-info btn-sm" role="button">Details</a></td>
-                                </tr>
+                                    <tr>
+                                        <td>{{ user.uname }}</td>
+                                        <td>{{ user.name }}</td>
+                                        <td>{{ user.email }}</td>
+                                        <td>{{ user.phone }}</td>
+                                        <td><a href="#" class="btn btn-info btn-sm" role="button">Details</a></td>
+                                    </tr>
                                 {% endfor %}
                             </tbody>
                         </table>
