--- a/src/CoreLABSBundle/Resources/views/Default/index.html.twig
+++ b/src/CoreLABSBundle/Resources/views/Default/index.html.twig
@@ -1,12 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block title %}Welcome to CCNY CoreLABS{% endblock %}
+
+{% block navigation %}
    <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -15,13 +17,10 @@
                 <a class="navbar-brand" href="#">CCNY CoreLABS</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="http://corelabs.sci.ccny.cuny.edu">Online Schedule</a>
-                    </li>
-                    <li>
-                        <a href="http://corelabsadmin.dev/dashboard">Admin Login</a>
+                        <a href="http://corelabsadmin.dev/dashboard">Login</a>
                     </li>
                     <li>
                         <a href="http://forum.sci.ccny.cuny.edu/core_facilities/corelabs-guide/contact">Contact us</a>
@@ -32,7 +31,10 @@
         </div>
         <!-- /.container -->
     </nav>
+ 
+{% endblock %}
 
+{% block content %}
     <!-- Page Content -->
     <div class="container">
 
